<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Chào bạn, hãy chọn một tác vụ</string>
    <string name="app_name">eMenu client</string>
    <string name="table_list_caption">Chọn bàn</string>
    <string name="caption_main_menu">Thực đơn</string>
    <string name="split_table_caption">Tách bàn</string>
    <string name="title_dialog_auth">Chọn công việc</string>
    <string name="context_select_table">Chọn bàn</string>
    <string name="context_table_item_check">Thanh toán</string>
    <string name="context_table_item_split">Tách bàn</string>
    <string name="caption_create_new_table_group">Tạo nhóm bàn mới</string>
    <string name="caption_waiter_username">Tên đăng nhập</string>
    <string name="caption_waiter_password">Mật khẩu</string>
    <string name="caption_ok">Đồng ý</string>
    <string name="caption_cancel">Hủy bỏ</string>
    <string name="caption_price">Giá</string>
    <string name="sample_long">This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. This is a long sample text. </string>
    <string name="option_view_order">Xem Order</string>
    <string name="caption_remove">Xóa</string>
    <string name="sign_minus">-</string>
    <string name="sign_plus">+</string>
    <string name="function_onChildClick">onChildClick</string>
    <string name="letter_x">x</string>
    <string name="text_note">Ghi chú món</string>
    <string name="text_select_one_unit">Hãy chọn một giá</string>
    <string name="text_adjust_quantity">Hãy chọn số lượng</string>
    <string name="text_give_note">Ghi chú món</string>
    <string name="text_choose_a_price">Chọn giá</string>
    <string name="caption_exit">Thoát</string>
    <string name="option_confirm_order">Xác nhận Order</string>
    <string name="message_confirm_order_item_deletion">Bạn có chắc muốn bỏ món này?</string>
    <string name="caption_yes">Có</string>
    <string name="caption_no">Không</string>
    <string name="text_total">Tổng cộng</string>
    <string name="text_number_of_customer">Số lượng thực khách</string>
    <string name="text_each_pays">Mỗi người cần chi trả</string>
    <string name="option_equal_bill_split">Chia đều</string>
    <string name="option_custom_bill_split">Chia theo khẩu phần</string>
    <string name="text_split">Tách</string>
    <string name="text_quantity">Số lượng</string>
    <string name="text_select">Chọn</string>
    <string name="option_payment">Thanh toán</string>
    <string name="message_connect_server_failed">Lỗi Kết nối server</string>
    <string name="message_confirm_order">Các món bạn gọi sẽ được chuyển đến bếp</string>
    <string name="message_order_sent">Gửi order thành công!</string>
    <string name="text_bill_total">Tổng tiền</string>
    <string name="message_bill_sent">Thanh toán thành công! Vui lòng chờ nhận hóa đơn!</string>
    <string name="text_splash_screen">Nhà hàng Android Food</string>
    <string name="text_splited_bill_part">Các khẩu phần đã chia:</string>
    <string name="title_dialog_bill_split">Chia hóa đơn</string>
    <string name="message_confirm_send_bill">Bạn có chắc chắn muốn thanh toán bây giờ không?</string>
    <string name="text_welcome_people">Kính chào quý khách!</string>
    <string name="text_auto_sync">Tự động đồng bộ mỗi khi khởi động ứng dụng</string>
    <string name="text_sync_now">Đồng bộ ngay bây giờ</string>
    <string name="message_sync_succeed">Đồng bộ dữ liệu thành công</string>
    <string name="message_sync_failed">Đồng bộ dữ liệu không thành công</string>
    <string name="key_pref_sync_now">key_pref_sync_now</string>
    <string name="key_pref_auto_sync">key_pref_auto_sync</string>
    <string name="pref_syncing">Đồng bộ dữ liệu</string>
    <string name="text_unsync">Chưa đồng bộ dữ liệu</string>
    <string name="text_at_time">vào lúc</string>
    <string name="text_loading">Đang tải</string>
    <string name="message_confirm_sync_db">Chuẩn bị đồng bộ dữ liệu với Server</string>
    <string name="caption_table_map">Sơ đồ bàn</string>
    <string name="caption_preferences">Thiết lập</string>
    <string name="option_back">Quay lại</string>
    <string name="message_busy_table_grouping_failed">Không thể chọn bàn đang có khách để ghép.</string>
    <string name="message_table_grouping_failed">Ghép bàn không thành công</string>
    <string name="message_table_spliting_failed">Tách bàn không thành công</string>
    <string name="message_table_spliting_succeed">Tách bàn thành công</string>
    <string name="message_single_table_spliting_failed">Không thể thực hiện tách bàn trên bàn đơn</string>
    <string name="caption_plus_one">+1</string>
    <string name="text_please_select_unit">Chọn giá</string>
    <string name="text_dish_name_sample">Tên món ăn mẫu</string>
    <string name="message_order_item_added">Đã thêm một món vào order</string>
    <string name="sub_order_list_at">Danh sách order tại bàn</string>
    <string name="sub_order_no">Order số</string>
    <string name="sub_selected_order">Order được chọn</string>
    <string name="option_group_table">Nhóm bàn</string>
    <string name="caption_select_table_group">Chọn nhóm bàn</string>
    <string name="message_please_choose_one_table_group">Vui lòng chọn một nhóm bàn</string>
    <string name="message_must_least_2_tables_in_new_group">Phải chọn ít nhất 2 bàn để tạo nhóm mới</string>
    <string name="message_must_least_1_table_to_append">Phải chọn ít nhất 1 bàn để thêm bàn vào nhóm</string>
    <string name="message_multi_table_group_not_allowed">Bạn không được chọn nhiều nhóm bàn cùng lúc</string>
    <string name="message_select_table_failed">Chọn bàn không thành công</string>
    <string name="text_create_new_order">Tạo order mới</string>
    <string name="text_select_existing_order">Chọn order</string>
    <string name="message_create_new_order_failed">Tạo order mới không thành công</string>
    <string name="message_your_service_session_finished">Phiên phục vụ của bạn đã kết thúc.</string>
    <string name="message_you_are_leaving_main_menu">Bạn đang thoát khỏi màn hình thực đơn, muốn quay lại phải có nhân viên phục vụ xác nhận.</string>
    <string name="option_add_voucher">Thêm Voucher</string>
    <string name="caption_search">Tra</string>
    <string name="caption_use_voucher">Dùng voucher</string>
    <string name="text_voucher_name">Loại Voucher</string>
    <string name="text_voucher_value">Giá voucher</string>
    <string name="text_voucher_info">Mô tả Voucher</string>
    <string name="text_voucher_state">Tình trạng</string>
    <string name="text_type_voucher_code_here">Nhập mã voucher vào đây</string>
    <string name="text_voucher_validated">Được phép dùng Voucher cho hóa đơn</string>
    <string name="text_voucher_invalidated">Voucher không được áp dụng cho hóa đơn hoặc đã hết hạn.</string>
    <string name="message_please_set_one_voucher">Vui lòng cho biết voucher</string>
    <string name="message_voucher_comsumed">Đã sử dụng voucher.</string>
    <string name="message_waiting">Vui lòng chờ trong giây lát</string>
    <string name="message_please_check_voucher_again">Vui lòng xem lại chi tiết Voucher</string>
    <string name="text_null" />
    <string name="caption_quick_add">Chọn nhanh</string>
    <string name="caption_more_details">Xem thêm</string>
    <string name="caption_add_one">+ 1 suất</string>
    <string name="text_dish_unit">Đơn giá</string>
    <string name="caption_edit_order_item">Sửa</string>
    <string name="caption_tab_unordered_order_items">Chưa Order</string>
    <string name="caption_tab_ordered_order_items">Đã Order</string>
    <string name="caption_item_note">Ghi chú</string>
    <string name="message_log_in_failed">Đăng nhập thất bại</string>
    <string name="message_log_in_succeed">Đăng nhập thành công</string>
    <string name="pref_connection">Kết nối mạng</string>
    <string name="key_pref_server_address">key_pref_server_address</string>
    <string name="text_server_address">Địa chỉ server</string>
    <string name="activity_config">Cấu hình</string>
    <string name="text_select_table_to_split">Chọn bàn để tách khỏi nhóm</string>
    <string name="context_move_order_to">Chuyển Order</string>
    <string name="message_move_order_succeed">Chuyển bàn thành công</string>
    <string name="message_move_order_failed">Chuyển bàn không thành công. Mời chọn bàn lại.</string>
    <string name="caption_order_splitting">Tách Order</string>
    <string name="text_select_items">Chọn món</string>
    <string name="text_old_order">Order cũ</string>
    <string name="text_new_order">Order mới</string>
    <string name="action_main_menu_search">Tìm món</string>
    <string name="activity_main_menu">Thực đơn</string>
    <string name="activity_table_map">Sơ đồ bàn</string>
    <string name="activity_order">Order</string>
    <string name="activity_bill">Hóa đơn</string>
    <string name="text_related_dishes">Các món khác</string>
    <string name="text_voucher_usage">Dùng Voucher</string>
    <string name="text_sample_short">Short sample text</string>
    <string name="caption_split_all">Rã nhóm</string>
    <string name="message_table_spliting_all_failed">Tách nhóm bàn không thành công.</string>
    <string name="message_table_spliting_all_succeed">Tách nhóm bàn thành công.</string>
    <string name="text_being_promoted">Đang khuyến mãi</string>
    <string name="text_decrease">Giảm</string>
    <string name="text_from">Từ</string>
    <string name="text_to">Đến</string>
    <string name="text_processed_quantity">Đã chế biến</string>
    <string name="text_unprocessed_count">Chưa chế biến</string>
    <string name="message_request_completed">Yêu cầu đã được thực hiện.</string>
    <string name="message_request_failed">Yêu cầu không thực hiện được.</string>
    <string name="message_ordered_item_not_updated">Không thể sửa order theo yêu cầu.</string>
    <string name="message_new_quantity_lt_processed_item">Giảm quá số lượng cho phép</string>
    <string name="text_voucher_list">Danh sách Voucher</string>
    <string name="text_surcharge">Phụ thu</string>
    <string name="text_order">Order</string>
    <string name="message_splitting_orders_empty">Không được tách các order rỗng</string>
    <string name="message_order_splitting_failed">Tách order không thành công</string>
    <string name="message_auth_failed">Xác thực không thành công</string>
    <string name="message_auth_succeed">Xác thực thành công</string>
    <string name="caption_connection">Kết nối</string>
    <string name="text_dish_search_hint">Tìm tên món ăn</string>
    <string name="message_test_connection_ok">Kiểm tra kết nối thành công</string>
    <string name="message_test_connection_failed">Kiểm tra kết nối KHÔNG thành công</string>
    <string name="message_null_order_not_allowed">Order chưa có món nào</string>
    <string name="message_press_back_one_more_time">Nhấn thêm lần nữa để thoát khỏi Thực Đơn</string>
    <string name="text_select_des_table">Chọn bàn mới</string>

</resources>