<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="128dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@+id/imgDishAvatar"
        android:paddingLeft="5dp"
        android:paddingTop="3dp" >

        <TextView
            android:id="@+id/textDishName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnPlus"
            android:ellipsize="marquee"
            android:gravity="top|left"
            android:maxLines="1"
            android:text="Tôm nướng"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnPlus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="@string/function_onChildClick"
            android:text="@string/sign_plus" />

        <Button
            android:id="@+id/btnMinus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btnPlus"
            android:onClick="@string/function_onChildClick"
            android:text="@string/sign_minus" />

        <Button
            android:id="@+id/btnRemove"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/caption_remove" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/letter_x" android:padding="5dp"/>

        <EditText
            android:id="@+id/editDishNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textDishName"
            android:layout_toLeftOf="@+id/btnRemove"
            android:contentDescription="@string/sample_long"
            android:ems="10"
            android:hint="@string/text_note"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/textView1"
            android:text="TextView"
            android:textStyle="bold" android:padding="5dp"/>

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView1"
            layout="@layout/item_dish_units_spinner" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgDishAvatar"
        android:layout_width="128dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/dish_sample" />

</RelativeLayout>