<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center">

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_waiter_username" android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10">

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caption_waiter_password" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:gravity="center" android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/caption_cancel" android:layout_weight="1"/>

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/caption_ok" android:layout_weight="1"/>
    </TableRow>

</TableLayout>